<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/background"
    android:id="@+id/constrLayout">

    <View
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/header"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <TextView
        android:id="@+id/textViewFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/de"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/header"
        app:layout_constraintLeft_toLeftOf="@id/header"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"/>

    <Spinner
        android:id="@+id/spinnerFrom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textViewFrom"
        app:layout_constraintLeft_toLeftOf="@id/header"
        app:layout_constraintRight_toRightOf="@id/guideline"/>

    <TextView
        android:id="@+id/textViewValorParaConverter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valor"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/spinnerFrom"
        app:layout_constraintLeft_toLeftOf="@id/header"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/editTextValorParaConverter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/digite_um_valor"
        android:inputType="number|numberDecimal"
        app:layout_constraintLeft_toLeftOf="@id/header"
        android:maxLength="15"
        app:layout_constraintRight_toLeftOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/textViewValorParaConverter"
        android:layout_marginStart="6dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="6dp"
        android:background="@null"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/textViewTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/para"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@id/header"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"/>

    <Spinner
        android:id="@+id/spinnerTo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/guideline"
        app:layout_constraintRight_toRightOf="@id/header"
        app:layout_constraintTop_toBottomOf="@id/textViewTo"/>

    <TextView
        android:id="@+id/textViewConvertido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valor_convertido"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/spinnerTo"
        app:layout_constraintLeft_toLeftOf="@id/guideline"
        android:layout_marginTop="30dp"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/TextViewValorConvertido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textViewConvertido"
        app:layout_constraintLeft_toLeftOf="@id/guideline"
        app:layout_constraintRight_toRightOf="@id/header"
        android:textSize="18sp"
        android:text="0"
        android:textColor="@color/black"
        android:layout_marginStart="6dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="6dp"/>

    <TextView
        android:id="@+id/textViewData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dados_obtidos_do_banco_central_europeu_n_ltima_atualiza_o"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
        android:id="@+id/imageMoney"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="20dp"
        android:src="@drawable/coin_money"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>